--- a/design_doc/design_doc.tex
+++ b/design_doc/design_doc.tex
@@ -14,7 +14,7 @@
 \usepackage[TABBOTCAP, tight]{subfigure}
 \usepackage{enumitem}
 %\usepackage{pstricks, pst-node}
-
+\setcounter{page}{18}
 \usepackage{geometry}
 \geometry{margin=.75in}
 
