--- a/final_report/sections/learned_ernst.tex
+++ b/final_report/sections/learned_ernst.tex
@@ -1,7 +1,7 @@
 \documentclass[../final.tex]{subfiles}
 
 \begin{document}
-\subsection{Shannon Ernst: Survey Generation}
+\subsubsection{Shannon Ernst: Survey Generation}
 Over the course of the year I have learned a lot, mostly 
 nontechnical skills. This project was a web based app and 
 was very similar to work I have done in the past. The most 
