--- a/final_report/sections/learned_franco.tex
+++ b/final_report/sections/learned_franco.tex
@@ -1,7 +1,7 @@
 \documentclass[../final.tex]{subfiles}
 
 \begin{document}
-\subsection{Javier Franco: Report Generation}
+\subsubsection{Javier Franco: Report Generation}
 The technical information that I learned by working on this project is that I learned how to create a JSON object in JavaScript to send to PHP to store in a database table. This helps reduced the number of tables that are needed for storing information. Another thing that I learned in this project is the that it is important to have an onload function in HTML web page to populate the first dropdown menu to prevent a delay in the other dropdown menus when they are populated. Furthermore, I learned how to generate an HTML object using a JSON object. I also learned the process of sending a variable between JavaScript and PHP using an XMLHTTP request which was something that I did not know how to do very well. 
 
  What I have learned working in a team is that having a group leader is important because they setup meetings to check on the current progress of each person in the group and they also address the things that need to be finished before a deadline. If a group did not have a group leader I feel that the group will be less focused on finishing the project and it would also result in less group meetings. I learned debugging as a team is very effective because certain members in a group can identify bugs that are causing a problem more quickly due to their experience which saves time. Another thing that I learned is that it is important to communicate with your team members if you do not understand something, so that they can help you. I learned that if a group member has less work to do it is very helpful to the group when they work on other parts of the project or help out other group members with their parts in order to make more progress. I learned that writing clean code is very important, so that other group members are able to help you with your part. This is something that I am going to work on because I was coding on the fly instead of thinking things through and writing out a plan.
