--- a/final_report/sections/learned_nichols.tex
+++ b/final_report/sections/learned_nichols.tex
@@ -1,7 +1,7 @@
 \documentclass[../final.tex]{subfiles}
 
 \begin{document}
-\subsection{Kyle Nichols: Database Management}
+\subsubsection{Kyle Nichols: Database Management}
 Over the year, I primarily learned about working in a team more than the specific technology I worked with, though I did learn some new technical skills in web development.
 In the realm of teamwork, I learned a lot (or least solidified what I expected) about how to communicate as a team and work as a team to accomplish a larger project that you would be not expected to do alone.
 Splitting tasks reasonably between the team, and in a way that is understanding of each team member's skills and expertise, takes an understanding of each person on that team.
