--- a/final_report/sections/techreview_changes.tex
+++ b/final_report/sections/techreview_changes.tex
@@ -1,5 +1,10 @@
 \documentclass[../final.tex]{subfiles}
 \subsubsection{Survey Distribution Section}
+A change that was made as far as technology was what version of 
+javascript was going to be used. Originally, AngularJS was going to be 
+used. This was exchanged for raw javascript and DOM manipulation for 
+the easy and speed of set up. Additionally, the Central Services web 
+hosting is a LAMP stack using PHP 5 and mySQL. 
 One change to the technology utilized in our system was the survey distribution.
 In regards to distributing surveys, we decided it was unnecessary to find a system to distribute them since the surveys would ultimately be taken through the website during camps.
 Students who enter our website are given access to the survey based on the current camp they select.
