--- a/req_doc/requirements_document.tex
+++ b/req_doc/requirements_document.tex
@@ -14,7 +14,7 @@
 \usepackage[TABBOTCAP, tight]{subfigure}
 \usepackage{enumitem}
 %\usepackage{pstricks, pst-node}
-
+\setcounter{page}{7}
 \usepackage{geometry}
 \geometry{margin=.75in}
 
